# easel

./: .gitignore  Cargo.toml  README.md  dev_backlog.md  dev_backlog_final.md
examples/: basic_example.rs  brush_example.rs  stroke_example.rs
plan/: goal.md
src/: core.rs  lib.rs  main.rs  renderer.rs
src/core/: brush_engine.rs  color_space.rs  image.rs  pixol.rs  project.rs  workspace.rs
src/graph/: adjustment_node.rs  composite_node.rs  layer_node.rs  mod.rs  painting_node.rs  source_node.rs  stroke_node.rs
src/input/: bridge.rs  event.rs  mod.rs  stylus_driver.rs
src/shaders/: canvas.wgsl  rect.wgsl
src/ui/: canvas_area.rs  compositor.rs  drawer.rs  mod.rs  palette.rs  theme.rs  title_bar.rs  toolbar.rs  widget.rs
tests/: brush_engine_test.rs  graph_complex_test.rs  input_to_graph_test.rs  integration_test.rs  layer_composite_test.rs  painting_node_test.rs  project_format_test.rs
