[package]
name = "easel_core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
wgpu = "0.19"
winit = "0.30"
image = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytemuck = { version = "1", features = ["extern_crate_alloc"] }
glyphon = "0.5"
lyon = "1.0"
cosmic-text = "0.11"
euclid = "0.22"
pollster = "0.4"
raw-window-handle = "0.6"

[dev-dependencies]
tempfile = "3.14"

[lib]
# Defines this directory as a library crate
name = "easel_core"
path = "src/lib.rs"